rm service files

--- a/writing/article.html
+++ b/writing/article.html
@@ -159,7 +159,7 @@ hr {
 
 <p>Ключевым моментом в ведении любого бизнеса является исследование целевой аудитории. Это позволяет лучше узнать потребителей, сфокусировать свои усилия на удовлетворение их нужд. При оценке отношения потребителей к сложным продуктам, таким как образовательные услуги, туристические услуги, автомобили и пр., зачастую более важным является не столько рациональное, сколько эмоциональное восприятие товара. В качестве примера можно привести такие категории, как &ldquo;<em>престиж вуза</em>&rdquo; или &ldquo;<em>элитарность образования</em>&rdquo;, которые в большей степени отражают субъективную (эмоциональную) составляющую оценки, нежели объективную (рациональную).</p>
 
-<p>Современным инструментом оценки эмоционального восприятия продукта является сентимент-анализ (<a href="http://dx.doi.org/10.2200/S00416ED1V01Y201204HLT016">Liu, 2012</a> ). Основной задачей данного подхода является определение субъективного восприятия продукта на основе семантического разбора текста. Конечные методики, используемые в рамках сентимент-анализа, могут варироваться от сравнительно простого словарного разбора предложений до сложных эвристических алгоритмов.</p>
+<p>Современным инструментом оценки эмоционального восприятия продукта является сентимент-анализ (<em>Sentiment Analysis</em>) (<a href="http://dx.doi.org/10.2200/S00416ED1V01Y201204HLT016">Liu, 2012</a> ). Основной задачей данного подхода является определение субъективного восприятия продукта на основе семантического разбора текста. Конечные методики, используемые в рамках сентимент-анализа, могут варироваться от сравнительно простого словарного разбора предложений до сложных эвристических алгоритмов.</p>
 
 <p>Развитие глобальной сети Интернет и сервисов, которые в ней предоставляются, дает неограниченные возможности для сбора маркетинговых данных о выбранной предметной области. В частности, микроблоги &mdash; сервисы, позволяющие публиковать в сети короткие сообщения с помощью как стационарных, так и мобильных устройств, являются наиболее популярным способом агрегирования текстовой информации. Наиболее популярным сервисом микроблогов заслуженно считают <em>Twitter</em> (<a href="http://twitter.com/"></a> ), среди прочих достоинств которого можно отметить наличие программных интерфейсов (<em>Application Programming Interface &mdash; API</em>), предоставляющих богатые возможности по автоматизации.</p>
 
@@ -177,6 +177,43 @@ hr {
 <p>В первой части статьи приводится описание базовых техник, применяемых в сентимент-анализе, вторая часть посвящена вопросам, связанным со сбором и первичной обработкой данных, в третьей части описываются основные результаты и делаются выводы о проделанной работе.</p>
 
 <h2>1. Сентимент-анализ</h2>
+
+<p>Сентимент-анализ (анализ тональности) &mdash; это раздел компьютерной лингвистики, в рамках которого изучается извлечение мнений и эмоциональной окрашенности текста. Как правило, с помощью анализа тональности выясняют отношение автора текста к рассматриваемой теме. Обычно такое отношение измеряют на простой шкале &ldquo;положительное мнение&rdquo; / &ldquo;отрицательное мнение&rdquo;, более сложные системы предусматривают использование многоуровневой шкалы.</p>
+
+<p>Анализ тональности нашел применение в различных областях: социология, политология, психология, медицина, маркетинг и др. В каждом конкретном случае могут ставиться отличные исследовательские или коммерческие задачи, однако используемый инструментарий чаще всего совпадает.</p>
+
+<p>Подходы к классификации тональности можно разделить на следующие категории:
+1. Использование набора &ldquo;если-то&rdquo;.
+2. Словарный разбор предложений.
+3. Машинное обучение с учителем.
+4. Машинное обучение без учителя </p>
+
+<pre><code>
+Error in eval(expr, envir, enclos) : could not find function &quot;sitep&quot;
+
+</code></pre>
+
+<p>.</p>
+
+<p>Первый тип систем состоит из набора правил, применяя которые система делает заключение о тональности текста. Например, для предложения «Я люблю кофе», можно применить следующее правило:</p>
+
+<p>если сказуемое (&ldquo;люблю&rdquo;) входит в положительный набор глаголов (&ldquo;люблю&rdquo;, &ldquo;обожаю&rdquo;, &ldquo;одобряю&rdquo; &hellip;) и в предложении не имеется отрицаний, то классифицировать тональность как &ldquo;положительная&rdquo;</p>
+
+<p>Многие коммерческие системы используют данный подход, несмотря на то что он требует больших затрат, т.к. для хорошей работы системы необходимо составить большое количество правил. Зачастую правила привязаны к определенному домену (например, «ресторанная тематика») и при смене домена («обзор фотоаппаратов») требуется заново составлять правила. Тем не менее, этот подход является наиболее точным при наличии хорошей базы правил, но совершенно неинтересным для исследования.</p>
+
+<p>Подходы, основанные на словарях, используют так называемые тональные словари (affective lexicons) для анализа текста. В простом виде тональный словарь представляет из себя список слов со значением тональности для каждого слова. Вот пример из базы ANEW, переведенный на русский:
+слово   валентность (1-9)
+счастливый    8.21
+хороший  7.47
+скучный  2.95
+сердитый    2.85
+грустный    1.61</p>
+
+<p>Чтобы проанализировать текст, можно воспользоваться следующим алгоритмом: сначала каждому слову в тексте присвоить его значением тональности из словаря (если оно присутствует в словаре), а затем вычислить общую тональность всего текста. Вычислять общую тональность можно разными способами. Самый простой из них — среднее арифметическое всех значений. Более сложный — обучить классификатор (напр. нейронная сеть).</p>
+
+<p>Машинное обучение с учителем является наиболее распространенным методом, используемым в исследованиях. Его суть состоит в том, чтобы обучить машинный классификатор на коллекции заранее размеченных текстах, а затем использовать полученную модель для анализа новых документов. Именно про этот метод я расскажу далее.</p>
+
+<p>Машинное обучение без учителя представляет собой, наверное, наиболее интересный и в то же время наименее точный метод анализа тональности. Одним из примеров данного метода может быть автоматическая кластеризация документов.</p>
 
 <p>unsupervised learning for classification up/down recommendations (<a href="">Isabelle &amp; Turney, unknown</a> ) </p>
 
@@ -222,8 +259,6 @@ hr {
 </ol>
 
 <p>Таким образом, в течение одной недели марта 2013 года было обработано и зарегистрировано 42803 сообщений микроблогов <em>Twitter</em> на английском языке, касающихся высшего образования.</p>
-
-<h3>Описательные статистика</h3>
 
 <h2>3. Результаты</h2>
 
@@ -392,7 +427,7 @@ hr {
 <li>Сопоставление эмоциональных оценок сообщений с рейтингами университетов по странам.</li>
 </ul>
 
-<p>Весь анализ был проведен на платформе <em>R</em> (<a href="http://www.R-project.org/"></a> ), использовались пакеты <em>RCurl</em> (<a href="http://CRAN.R-project.org/package=RCurl">Lang, 2013</a> ), <em>RJSONIO</em> (<a href="http://CRAN.R-project.org/package=RJSONIO">Lang, 2013b</a> ) для агрегации данных от веб-служб <em>Twitter</em> и <em>GeoNames</em>, <em>ggplot2</em> (<a href="http://had.co.nz/ggplot2/book">Wickham, 2009</a> ), <em>wordcloud</em> (<a href="http://CRAN.R-project.org/package=wordcloud">Fellows, 2012</a> ), <em>rworldmap</em> (<a href="http://CRAN.R-project.org/package=rworldmap">South <em>et. al.</em> 2012</a> ) &mdash; для визуализации результатов, <em>plyr</em> (<a href="http://www.jstatsoft.org/v40/i01/">Wickham, 2011</a> ), <em>stringr</em> (<a href="http://CRAN.R-project.org/package=stringr">Wickham, 2012</a> ), <em>data.table</em> (<a href="http://CRAN.R-project.org/package=data.table">Dowle <em>et. al.</em> 2013</a> )&mdash; для общей и статистической обработки данных, <em>tm</em> (<a href="http://CRAN.R-project.org/package=tm">Feinerer &amp; Hornik, 2013</a> ; <a href="http://www.jstatsoft.org/v25/i05/">Feinerer <em>et. al.</em> 2008</a>  ) &mdash; для семантического анализа текста.</p>
+<p>Весь анализ был проведен на платформе <em>R</em> (<a href="http://www.R-project.org/"></a> ), использовались пакеты <em>RCurl</em> (<a href="http://CRAN.R-project.org/package=RCurl">Lang, 2013</a> ), <em>RJSONIO</em> (<a href="http://CRAN.R-project.org/package=RJSONIO">Lang, 2013b</a> ) для агрегации данных от веб-служб <em>Twitter</em> и <em>GeoNames</em>, <em>ggplot2</em> (<a href="http://had.co.nz/ggplot2/book">Wickham, 2009</a> ), <em>wordcloud</em> (<a href="http://CRAN.R-project.org/package=wordcloud">Fellows, 2012</a> ), <em>rworldmap</em> (<a href="http://CRAN.R-project.org/package=rworldmap">South <em>et. al.</em> 2012</a> ) &mdash; для визуализации результатов, <em>plyr</em> (<a href="http://www.jstatsoft.org/v40/i01/">Wickham, 2011</a> ), <em>stringr</em> (<a href="http://CRAN.R-project.org/package=stringr">Wickham, 2012</a> ), <em>data.table</em> (<a href="http://CRAN.R-project.org/package=data.table">Dowle <em>et. al.</em> 2013</a> )&mdash; для общей и статистической обработки данных, <em>tm</em> (<a href="http://CRAN.R-project.org/package=tm">Feinerer &amp; Hornik, 2013</a> ; <a href="http://www.jstatsoft.org/v25/i05/">Feinerer <em>et. al.</em> 2008</a>  ) &mdash; для семантического анализа текста. Исходный программный код, использованный при написании статьи доступен по адресу (<a href="https://github.com/redmode/twitter-sentiment-education"></a> ).</p>
 
 <h2>Литература</h2>
 
@@ -408,6 +443,7 @@ fast assignment, fast grouping and list columns..  <a href="http://CRAN.R-projec
 <li> GeoNames.  <a href="http://geonames.org/">http://geonames.org/</a></li>
 <li> the Twitter Streaming APIs.  <em>@twitterapi</em>  <a href="https://dev.twitter.com/docs/streaming-apis">https://dev.twitter.com/docs/streaming-apis</a></li>
 <li>Jacob Eisenstein, Brendan O&#39;Connor, Noah Smith, Eric Xing,  A latent variable model for geographic lexical variation.  <em>Proceedings of the 2010 Conference on Empirical Methods in Natural Language Processing</em>  <a href="http://dl.acm.org/citation.cfm?id=1870782">http://dl.acm.org/citation.cfm?id=1870782</a></li>
+<li> redmode,  twitter-sentiment-education.  <em>GitHub</em>  <a href="https://github.com/redmode/twitter-sentiment-education">https://github.com/redmode/twitter-sentiment-education</a></li>
 <li>Duncan Lang,   (2013) RCurl: General network (HTTP/FTP/&hellip;) client interface for R.  <a href="http://CRAN.R-project.org/package=RCurl">http://CRAN.R-project.org/package=RCurl</a></li>
 <li>Duncan Lang,   (2013) RJSONIO: Serialize R objects to JSON, JavaScript Object Notation.  <a href="http://CRAN.R-project.org/package=RJSONIO">http://CRAN.R-project.org/package=RJSONIO</a></li>
 <li>Bing Liu,   (2012) Sentiment Analysis And Opinion Mining.  <em>Synthesis Lectures on Human Language Technologies</em>  <strong>5</strong>  1-167  <a href="http://dx.doi.org/10.2200/S00416ED1V01Y201204HLT016">10.2200/S00416ED1V01Y201204HLT016</a></li>
